--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <tr>
     <td class="body" colspan="2">
       
-      <b>About</b>
+      <h1><b>About</b></h1>
       
       <p>Howdy, my name is Abby! I'm a Wildlife Biologist and Data Analyst living near Washington, DC. I am currently pursuing my dream job of processing and managing migratory bird data. I work in R and python most days, but my background is in ornithology. 
       <p>Before starting my current position, I studied Red-headed Woodpecker parental care behavior and home range size for my Master's degree with the <a href="https://rampages.us/bullucklab/">Bulluck Avian Ecology Lab</a> at Virginia Commonwealth University. 
