--- a/gifs.html
+++ b/gifs.html
@@ -34,7 +34,7 @@
   <tr>
     <td class="body" colspan="2">
       
-      <b>Gif Gallery</b>
+      <h1><b>Gif Gallery</b></h1>
       
       <p>To collect data for my research on Red-headed Woodpecker (<i>Melanerpes erythrocephalus</i>) parental care behavior, I recorded a few hundred hours of video. 
         The videos I recorded are of breeding pairs at nest cavities from 2017-2018 at Fort A.P. Hill, Virginia, USA.
