--- a/projs.html
+++ b/projs.html
@@ -37,7 +37,7 @@
       <h1><b>Data Projects</b></h1>
       
       <p><b>Garden Helpr</b> / <a href = "https://github.com/lawalter/gardenhelpr">gardenhelpr</a>
-        <br>[In progress] 2022-present 
+        <br>[In development] 2022-present 
         <br>I started this R Shiny app to assist in backyard garden planning. 
         Initially, I had an idea to calculate the mean pH requirements of all of the plants I was hoping to grow in my yard. 
         As I did more research, I learned about the benefits of companion planting (and drawbacks to planting "enemies" together)! 
