--- a/pubs.html
+++ b/pubs.html
@@ -58,7 +58,7 @@
   </tr>
   <tr>
     <td class="foot" colspan="2">
-      <center>Website by Abby Walter</center>
+      <center>Website by Abby Walter | <a href = "https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a></center>
     </td>
   </tr>
 </thead>
