--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
       
       <h1><b>About</b></h1>
       
-      <p>Howdy, my name is Abby! I'm a Wildlife Biologist and Data Analyst living near Washington, DC. I am currently pursuing my dream job of processing and managing migratory bird data. I work in R and python most days, but my background is in ornithology. 
-      <p>Before starting my current position, I studied Red-headed Woodpecker parental care behavior and home range size for my Master's degree with the <a href="https://rampages.us/bullucklab/">Bulluck Avian Ecology Lab</a> at Virginia Commonwealth University. 
-         I went to undergrad in my hometown at the University of Delaware, during and after which time I worked on several seasonal avian field jobs. 
-         Over time, my career interests have brought me to the world of data management. In the coming years, I look forward to learning more about the art of data visualization, science communication, and new coding languages.
-
+      <p>Howdy, my name is Abby! I'm a Wildlife Biologist and Data Analyst located near Washington, DC. I work for the US Fish and Wildlife Service to process and manage migratory bird data with R and Python. 
+      <p>Born and raised in Delaware, I went to undergrad in my hometown of Newark at the University of Delaware to study Wildlife Conservation and Ecology. During and after undergrad I worked on seasonal field jobs with species such as Wood Thrush, Piping Plovers, Red-cockaded Woodpeckers, and frosted flatwoods salamanders from Rhode Island to Florida. Eventually, I started graduate school with the <a href="https://rampages.us/bullucklab/">Bulluck Avian Ecology Lab</a> at Virginia Commonwealth University. In Virginia, I studied several aspects of Red-headed Woodpecker behavior and life history; I quantified sex-specific parental care behavior, home range size, and plumage characteristics. I then helped with a myriad of projects with the National Zoo and Smithsonian Migratory Bird Center before moving on to USFWS. I am a certified <a href="https://wildlife.org/learn/professional-development-certification/certification-programs/">Associate Wildlife Biologist</a> and very happy with how my background in ornithology has gradually brought me to the world of data management. In the coming years, I look forward to learning more about data visualization, science communication, and new coding languages.
+  
     </td>
   </tr>
   <tr>
