--- a/projs.html
+++ b/projs.html
@@ -59,7 +59,7 @@
         Initially, I had an idea to calculate the mean pH requirements of all of the plants I was hoping to grow in my yard. 
         As I did more research, I learned about the benefits of companion planting (and drawbacks to planting "enemies" together)! 
         When completed, the gardenhelpr app will be able to take a list of plants a user is planning to grow and output both (1) ideal growing conditions (pH, soil, light, etc) as well as (2) any plant relationships and subsequent spacing recommendations.
-        <p><center><img src="https://github.com/lawalter/gardenhelpr/raw/master/images/gh_app.png" id="thumb"/></center>
+        <p><center><img src="https://github.com/lawalter/gardenhelpr/blob/main/images/gh_app.png" id="thumb"/></center>
           
       <p><b><a href = "https://lawaltr.shinyapps.io/colorband/">Colorband Combination Generator</a></b> / <a href = "https://github.com/lawalter/colorband-app">colorband-app</a>
         <br>[Complete] 2020 
@@ -71,7 +71,7 @@
       
       <p><b>R Shiny Electron App Guide</b> / <a href = "https://github.com/lawalter/r-shiny-electron-app">r-shiny-electron-app</a>
         <br>[Complete] 2020
-        <br>This is a guide to creating a desktop R Shiny app with Electron on both macOS and Windows.
+        <br>This is a guide to creating a desktop R Shiny app on both macOS and Windows with Electron.
     </td>
   </tr>
   <tr>
