--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       
       <h1><b>About</b></h1>
       
-      <p>Howdy, my name is Abby! I'm a Wildlife Biologist and Data Analyst located near Washington, DC. 
-      <p>Born and raised in Delaware, I went to undergrad in my hometown of Newark at the University of Delaware to study Wildlife Conservation and Ecology. During and after undergrad I worked on seasonal field jobs from Rhode Island to Florida with species such as Wood Thrush, Piping Plovers, and Red-cockaded Woodpeckers. I eventually settled in Virginia to start graduate school with the <a href="https://rampages.us/bullucklab/">Bulluck Avian Ecology Lab</a> at Virginia Commonwealth University, where I studied Red-headed Woodpecker sex-specific parental care behavior and home range size for my MSc. I’m now a certified <a href="https://wildlife.org/learn/professional-development-certification/certification-programs/">Associate Wildlife Biologist</a> and work for the US Fish and Wildlife Service to process migratory bird data using R and Python. 
-      <p>I am happy that my background in ornithology has brought me to the world of data management. In the coming years, I look forward to learning more about data visualization, science communication, and new coding languages.
-  
+      <p>Howdy, my name is Abby! I'm a Wildlife Biologist and Data Analyst located near Washington, DC. I work for the US Fish and Wildlife Service to process and manage migratory bird data with R and Python.
+      <p>Born and raised in Delaware, I went to undergrad in my hometown of Newark at the University of Delaware to study Wildlife Conservation and Ecology. During and after undergrad I worked on seasonal field jobs from Rhode Island to Florida with species such as Wood Thrush, Piping Plovers, and Red-cockaded Woodpeckers. I eventually settled in Virginia to start graduate school with the <a href="https://rampages.us/bullucklab/">Bulluck Avian Ecology Lab</a> at Virginia Commonwealth University, where I studied Red-headed Woodpecker sex-specific parental care behavior and home range size for my MSc. I learned about data wrangling at the Smithsonian Migratory Bird Center, and realized managing wildlife data was the career for me. 
+      <p>I am a certified <a href="https://wildlife.org/learn/professional-development-certification/certification-programs/">Associate Wildlife Biologist</a> and happy that my background in ornithology has brought me to the world of data management. In the coming years, I look forward to learning more about data visualization, science communication, and new coding languages.
+
     </td>
   </tr>
   <tr>
