--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="css/academicons.min.css">
     <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     
