--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="images/site.webmanifest">
     
     <!-- Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="css/academicons.min.css">
