--- a/pubs.html
+++ b/pubs.html
@@ -52,7 +52,10 @@
       
       <h1><b>publications</b></h1>
       
-      <p><b>Walter, L. A.,</b> C. B. Viverette, and L. P. Bulluck. Accepted. Parental care in a sexually monomorphic Picid, the Red-headed Woodpecker. Journal of Field Ornithology. [<a href = "https://github.com/lawalter/rhwo-parental-care">GitHub repo</a>]
+      <p><b>Walter, L. A.,</b> C. B. Viverette, and L. P. Bulluck. Accepted. Parental care in a sexually monomorphic Picid, the Red-headed Woodpecker. Journal of Field Ornithology. 
+        [<a href = "https://doi.org/10.5751/JFO-00089-930203">online</a> | 
+        <a href = "https://journal.afonet.org/vol93/iss2/art3/JFO-2022-89.pdf">pdf</a> | 
+        <a href = "https://github.com/lawalter/rhwo-parental-care">access data</a>]
       <p>Bulluck, L., B. Nickley, <b>A. Walter,</b> and C. Viverette. 2018. Species co-occurrence patterns among cavity nesting birds across seasons and in a landscapes with varying habitat complexity. In ECCB2018: 5th European Congress of Conservation Biology. 12th-15th of June 2018, Jyväskylä, Finland. Open Science Centre, University of Jyväskylä.
 
       <p>
