--- a/gifs.html
+++ b/gifs.html
@@ -40,8 +40,9 @@
       <a href = "projs.html">projects</a> / 
       <a href = "gifs.html">gifs</a>
       <p><a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
+      <a href = "https://fosstodon.org/@abby" rel = "me"><i class="fab fa-mastodon fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
-      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-lg"></i></a>
+      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-binoculars fa-lg"></i></a>
       <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
       <a href = "https://scholar.google.com/citations?hl=en&user=lj-_bcwAAAAJ"><i class="ai ai-google-scholar-square fa-lg"></i></a>
       <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-lg"></i></a>
