--- a/projs.html
+++ b/projs.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Title -->
-    <title>Abby Walter | Wildlife Bilogist & Data Analyst</title>
+    <title>Abby Walter | Wildlife Biologist & Data Analyst</title>
     
     <!-- Icons -->      
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
